# llama3_rag_reranker

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml  smoke.yaml
examples/: eval.jsonl  rerank_seed.jsonl
examples/corpus/: earth.txt  jupiter.txt  mars.txt  mercury.txt  saturn.txt  venus.txt
scripts/: build_data.py  build_rag.py  evaluate_ragas.py  finetune_reranker.py  serve.py
src/llama3_rag_reranker/: __init__.py  config.py  data.py  embeddings.py  evaluate.py  finetune.py  generator.py  prompts.py  rag.py  reranker.py  retrievers.py  scripts_entry.py  serve.py
tests/: conftest.py  test_data.py  test_reranker.py  test_retrievers.py
